output.txt
1_11.cpp: In function ‘int main()’:
1_11.cpp:6:1: error: ‘cout’ was not declared in this scope
 cout<<"Hello";
 ^
1_11.cpp:6:1: note: suggested alternative:
In file included from 1_11.cpp:1:0:
/usr/include/c++/5/iostream:61:18: note:   ‘std::cout’
   extern ostream cout;  /// Linked to standard output
                  ^